--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -6,8 +6,8 @@
     <ImageView
         android:id="@+id/gallery_photo"
         android:adjustViewBounds="true"
-        android:layout_height="200dp"
-        android:layout_margin="2dp"
-        android:layout_width="match_parent"/>
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_margin="2dp"/>
 
 </LinearLayout>
