--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -7,7 +7,7 @@
         android:id="@+id/gallery_photo"
         android:adjustViewBounds="true"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_margin="2dp"/>
 
 </LinearLayout>
