--- a/app/src/main/res/layout/style_item.xml
+++ b/app/src/main/res/layout/style_item.xml
@@ -8,6 +8,8 @@
         android:id="@+id/gallery_photo"
         android:layout_width="120dp"
         android:layout_height="120dp"
+        android:paddingStart="2dp"
+        android:paddingEnd ="2dp"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
