--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -3,9 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_back"
+        android:icon="@drawable/baseline_arrow_back_white_18dp"
+        android:title="@string/action_settings"
+        app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/action_forward"
+        android:icon="@drawable/baseline_arrow_forward_white_18dp"
+        android:title="@string/action_settings"
+        app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/action_save"
+        android:icon="@drawable/baseline_save_alt_white_18dp"
+        android:title="@string/save_photo"
+        app:showAsAction="always"/>
+
+
+    <item
         android:id="@+id/action_settings"
         android:icon="@drawable/baseline_save_alt_black_36dp"
         android:title="@string/action_settings"
-        app:showAsAction="ifRoom"
+        app:showAsAction="never"
         />
 </menu>
