Add back/forward buttons

--- a/app/src/main/res/layout/port_dialog.xml
+++ b/app/src/main/res/layout/port_dialog.xml
@@ -13,6 +13,6 @@
         android:id="@+id/port_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="number"/>
+        android:inputType="text"/>
 
 </LinearLayout>
